# quiz-app

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  run_api.py
.github/workflows/: main.yml
src/: __init__.py  api.py  database.py  question.py  quiz.py  result.py
tests/: test_api.py  test_integration.py  test_question.py  test_quiz.py  test_quiz_categories.py  test_quiz_database.py  test_quiz_difficulty.py  test_quiz_review.py  test_quiz_timer.py  test_result.py
